--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                 <h1>Visual PDF Editor</h1>
                 <p>Combine, reorder, and edit pages from PDFs and images.</p>
             </div>
+            <p style="text-align: center; padding: 10px;">For a Simple Merge and Reorder Click here: <a href="/simple.html" target="_blank">Simple Merge and Reorder</a></p>
             <div class="start-drop-zone" id="startDropZone">
                 <div class="start-drop-zone-text">
                     Drag and drop PDF files and images here
