--- a/index.html
+++ b/index.html
@@ -144,15 +144,34 @@
             background: var(--bg-page); box-shadow: var(--shadow-sm);
             border: 2px solid transparent;
             transition: all 0.2s ease-in-out;
+            overflow: hidden; /* To contain rotated canvas */
         }
         .page-item:hover { transform: translateY(-3px); box-shadow: var(--shadow-md); }
         .page-item.selected { border-color: var(--primary); box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.4); }
-        .page-canvas { width: 100%; height: auto; display: block; border-radius: calc(var(--radius) - 2px); }
+        .page-canvas { width: 100%; height: auto; display: block; border-radius: calc(var(--radius) - 2px); transition: transform 0.2s ease-in-out; }
         .page-checkbox { position: absolute; top: 0.75rem; left: 0.75rem; width: 1.25rem; height: 1.25rem; z-index: 10; }
-        .page-order-input { position: absolute; bottom: 0.5rem; right: 0.5rem; width: 40px; height: 26px; border: 1px solid var(--border-color); border-radius: 0.375rem; text-align: center; font-size: 0.875rem; font-weight: 500; z-index: 10; }
-        .delete-page-btn { position: absolute; top: 0.5rem; right: 0.5rem; width: 28px; height: 28px; background: rgba(255,255,255,0.8); backdrop-filter: blur(4px); color: var(--text-secondary); border: 1px solid var(--border-color); border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; opacity: 0; transform: scale(0.8); transition: all 0.2s ease-in-out; z-index: 10; }
-        .page-item:hover .delete-page-btn { opacity: 1; transform: scale(1); }
+        
+        /* Thumbnail Action Buttons */
+        .page-top-actions { position: absolute; top: 0.5rem; right: 0.5rem; z-index: 10; }
+        .page-bottom-actions { position: absolute; bottom: 0.5rem; left: 0.5rem; right: 0.5rem; display: flex; justify-content: space-between; align-items: center; z-index: 10;}
+        .page-rotation-controls { display: flex; gap: 0.25rem; opacity: 0; transition: opacity 0.2s ease-in-out; }
+        .page-item:hover .page-rotation-controls { opacity: 1; }
+        .page-action-btn {
+            width: 28px; height: 28px; background: rgba(255,255,255,0.8); backdrop-filter: blur(4px);
+            color: var(--text-secondary); border: 1px solid var(--border-color); border-radius: 50%;
+            display: flex; align-items: center; justify-content: center; cursor: pointer;
+            transform: scale(0.8); transition: all 0.2s ease-in-out;
+        }
+        .page-item:hover .page-action-btn { transform: scale(1); }
+        .delete-page-btn { opacity: 0; }
+        .page-item:hover .delete-page-btn { opacity: 1; }
+        .page-action-btn:hover { color: var(--primary); background-color: var(--secondary-outline-hover); }
         .delete-page-btn:hover { color: var(--danger); background-color: var(--danger-outline-hover); }
+        
+        .page-order-input {
+            width: 40px; height: 26px; border: 1px solid var(--border-color); border-radius: 0.375rem;
+            text-align: center; font-size: 0.875rem; font-weight: 500;
+        }
 
         /* --- CONTEXTUAL FOOTER --- */
         .contextual-footer { display: flex; justify-content: space-between; align-items: center; padding: 1rem 1.5rem; border-top: 1px solid var(--border-color); background-color: var(--bg-sidebar); flex-shrink: 0; transform: translateY(100%); transition: transform 0.3s ease-in-out; }
@@ -254,6 +273,7 @@
                 </div>
                 <div class="selection-actions">
                     <span id="selection-count"></span>
+                    <button class="btn btn-secondary" id="rotateSelectedBtn">Rotate 90°</button>
                     <button class="btn btn-danger" id="deleteSelectedBtn">Delete Selected</button>
                     <div class="export-group">
                         <button class="btn btn-success" id="saveBtn">
